--- a/src/app/scout/auto/auto.component.html
+++ b/src/app/scout/auto/auto.component.html
@@ -99,7 +99,7 @@
                             <ion-label>
                                 Foul
                             </ion-label>
-                            <ion-toggle formControlName="auto_flFoul" color="danger"></ion-toggle>
+                            <ion-toggle formControlName="auto_flFoul" color="warning"></ion-toggle>
                         </ion-item>
                         <ion-item>
                             <ion-label>
