--- a/src/app/scout/comment/comment.component.html
+++ b/src/app/scout/comment/comment.component.html
@@ -174,7 +174,7 @@
                     (click)="onSubmit()"
                     [disabled]="commentForm.pristine || commentForm.invalid"
                     expand="block" color="success">
-                Save Auto
+                Save Comments
             </ion-button>
         </ion-col>
         <ion-col>
