--- a/src/app/scout/tele/tele.component.html
+++ b/src/app/scout/tele/tele.component.html
@@ -7,7 +7,7 @@
                         <ion-col>
                             <ion-item color="medium">
                                 <ion-label>
-                                    Rocket
+                                    Power Port
                                 </ion-label>
                             </ion-item>
                         </ion-col>
@@ -323,7 +323,7 @@
         </ion-col>
         <ion-col>
             <ion-button expand="block" color="light" (click)="createTeleForm()">
-                Cancel
+                Clear
             </ion-button>
         </ion-col>
         <ion-col>
