--- a/src/app/storage/storage.component.html
+++ b/src/app/storage/storage.component.html
@@ -9,106 +9,189 @@
 
 <ion-content>
 
-  <ion-row *ngIf="scouts.length !== 0">
-    <ion-col size-xl="6" size-lg="8" size="12">
+  <ion-row *ngIf="scouts.length === 0" class="ion-justify-content-center ns-margin-top">
+    <ion-col size-xl="5" size-lg="6" size-md="10" size-xs="12" class="ns-card-info">
+      <h1>No Matches</h1>
+    </ion-col>
+  </ion-row>
+
+  <ion-row *ngIf="pits.length === 0" class="ion-justify-content-center ns-margin-top">
+    <ion-col size-xl="5" size-lg="6" size-md="10" size-xs="12" class="ns-card-info">
+      <h1>No Pits</h1>
+    </ion-col>
+  </ion-row>
+
+  <ion-row *ngIf="scouts.length !== 0" class="ion-justify-content-center ns-margin-top">
+    <ion-col size-xl="6" size-lg="8" size="12" class="ns-card-storage">
       <ion-row>
         <ion-col>
-          <ul *ngFor="let s of scouts" (click)="selectedScout = s" class="ns-pointer">
+          <ion-item color="medium">
+            <ion-label>
+              Matches
+            </ion-label>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row class="ion-align-items-start ns-margin-top">
+        <ion-col size-lg="3" size-md="4" *ngFor="let s of scouts">
+          <ul>
             <li>
-              Scout - {{s.parentData.teamDetails.txScoutName}}
+              Match ({{s.parentData.teamDetails.numMatch}})
             </li>
             <li>
-              Match - {{s.parentData.teamDetails.numMatch}}
+              Team ({{s.parentData.teamDetails.idTeam}})
             </li>
             <li>
-              Team key - {{s.parentData.teamDetails.idTeam}}
+              <ion-button (click)="printScoutQrCode(s)">
+                Generate QR
+              </ion-button>
             </li>
             <!--        <li><pre>{{m | json}}</pre></li>-->
           </ul>
         </ion-col>
-        <ion-col *ngIf="selectedScout.parentData.teamDetails.numMatch !== 0">
-          <h2>QR code for match {{selectedScout.parentData.teamDetails.numMatch}}</h2>
-          <ion-button (click)="printScoutQrCode(selectedScout)">
-            Generate QR
-          </ion-button>
-          <ngx-qrcode
-                  qrc-element-type="text"
-                  qrc-version="40"
-                  [qrc-value] = "qrValue"></ngx-qrcode>
-        </ion-col>
-        <ion-col  *ngIf="selectedScout.parentData.teamDetails.numMatch !== 0">
-          <ion-row>
-            <ion-col *ngIf="scoutSpinner">
-              <ion-spinner></ion-spinner>
-            </ion-col>
-            <ion-col *ngIf="!scoutSpinner">
-              <ion-button (click)="sendScoutToApi(selectedScout)">Send Scout to Api</ion-button>
-            </ion-col>
-          </ion-row>
-        </ion-col>
       </ion-row>
-
-      <ion-row *ngIf="pits.length !== 0">
-        <ion-col size-xl="6" size-lg="8" size="12">
+      <ion-row *ngIf="qrValue !== ''">
+        <ion-col>
           <ion-row>
             <ion-col>
-              <ul (click)="selectedPit = p; pitQr = ''"
-                  *ngFor="let p of pits" class="ns-pointer">
-                <li>Team - {{p.team.nickname}} ({{p.team.key}})</li>
-              </ul>
+              <h5>
+                QR code for match <b>{{selectedScout.parentData.teamDetails.numMatch}}</b>
+              </h5>
+            </ion-col>
+          </ion-row>
+          <ion-row class="ion-nowrap">
+            <ion-col size="11">
+              <ngx-qrcode
+                      qrc-element-type="text"
+                      qrc-version="40"
+                      [qrc-value] = "qrValue"></ngx-qrcode>
+            </ion-col>
+            <ion-col size="1">
+              <ion-button color="medium" (click)="qrValue = ''">X</ion-button>
             </ion-col>
           </ion-row>
         </ion-col>
-        <ion-col *ngIf="selectedPit.team.key !== ''">
-          <h2>QR code for pit from team {{selectedPit.team.nickname}} ({{selectedPit.team.key}})</h2>
-          <ion-button (click)="printPitQrCode(selectedPit)">
-            Generate QR
-          </ion-button>
-          <ngx-qrcode
-                  qrc-element-type="text"
-                  qrc-version="40"
-                  [qrc-value] = "pitQr"></ngx-qrcode>
-        </ion-col>
-      </ion-row>
 
+
+      </ion-row>
     </ion-col>
   </ion-row>
 
-  <ion-row>
-<!--    <ion-col size-xl="6" size-lg="8" size="12" *ngIf="frcEvents.length !== 0">-->
-<!--      <h1>-->
-<!--        Stored Events-->
-<!--      </h1>-->
-<!--      <ul>-->
-<!--        <li *ngFor="let e of frcEvents">-->
-<!--          {{e.event_code}} - {{e.short_name}}-->
-<!--        </li>-->
-<!--      </ul>-->
-<!--    </ion-col>-->
+  <ion-row class="ion-justify-content-center ns-margin-top" *ngIf="scouts.length !== 0">
+    <ion-col size-lg="3" size-md="4" size-xs="6">
+      <ion-row class="ion-justify-content-center" *ngIf="scoutSpinner">
+        <ion-col>
+          <ion-spinner></ion-spinner>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!scoutSpinner" class="ion-justify-content-center">
+        <ion-col>
+          <ion-button (click)="sendScoutsToApi()">Send All Matches to Dropbox</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="successMessage">
+        <ion-col>
+          <ion-item color="success">
+            {{successMessage}}
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="errorMessage">
+        <ion-col>
+          <ion-item color="danger">
+            {{errorMessage}}
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-col>
+  </ion-row>
 
-    <ion-col size-xl="6" size-lg="8" size="12" *ngIf="eventsStorage.length !== 0">
+  <ion-row *ngIf="pits.length !== 0" class="ion-justify-content-center ns-margin-top">
+    <ion-col size-xl="6" size-lg="8" size="12" class="ns-card-storage">
       <ion-row>
         <ion-col>
-          <h1>
-            Stored Events
-          </h1>
+          <ion-item color="medium">
+            <ion-label>
+              Pits
+            </ion-label>
+          </ion-item>
         </ion-col>
       </ion-row>
-      <ion-row *ngFor="let e of eventsStorage">
-        <ion-col class="ns-pointer" (click)="selectedTeams = e.teams">
-          <h2>
-            {{e.event.event_code}} - {{e.event.short_name}}
-          </h2>
+      <ion-row class="ion-align-items-start ns-margin-top">
+        <ion-col size-lg="3" size-md="4" *ngFor="let p of pits">
+          <ul>
+            <li>
+              Team ({{p.pit.details.idTeam}})
+            </li>
+            <li>
+              {{p.team.nickname}}
+            </li>
+            <li>
+              <ion-button (click)="printPitQrCode(p)">
+                Generate QR
+              </ion-button>
+            </li>
+            <!--        <li><pre>{{m | json}}</pre></li>-->
+          </ul>
         </ion-col>
       </ion-row>
-    </ion-col>
+      <ion-row *ngIf="pitQr !== ''">
+        <ion-col>
+          <ion-row>
+            <ion-col>
+              <h5>
+                Pit Qr For <b>{{selectedPit.team.key}}</b>
+              </h5>
+            </ion-col>
+          </ion-row>
+          <ion-row class="ion-nowrap">
+            <ion-col size="11">
+              <ngx-qrcode
+                      qrc-element-type="text"
+                      qrc-version="40"
+                      [qrc-value] = "pitQr"></ngx-qrcode>
+            </ion-col>
+            <ion-col size="1">
+              <ion-button color="medium" (click)="pitQr = ''">X</ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-col>
 
-    <ion-col size-xl="6" size-lg="8" size="12" *ngIf="selectedTeams.length !== 0">
-      <ul>
-        <li *ngFor="let t of selectedTeams">{{t.key}} - {{t.nickname}}</li>
-      </ul>
-    </ion-col>
 
+      </ion-row>
+    </ion-col>
   </ion-row>
+
+
+
+  <ion-row class="ion-justify-content-center ns-margin-top" *ngIf="pits.length !== 0">
+    <ion-col size-lg="3" size-md="4" size-xs="6">
+      <ion-row class="ion-justify-content-center" *ngIf="pitSpinner">
+        <ion-col>
+          <ion-spinner></ion-spinner>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!pitSpinner" class="ion-justify-content-center">
+        <ion-col>
+          <ion-button (click)="sendPitsToApi()">Send All Pits to Dropbox</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="pitSuccessMessage">
+        <ion-col>
+          <ion-item color="success">
+            {{pitSuccessMessage}}
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="pitErrorMessage">
+        <ion-col>
+          <ion-item color="danger">
+            {{pitErrorMessage}}
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-col>
+  </ion-row>
+
 
 </ion-content>
