--- a/src/assets/sass/_ns-card.scss
+++ b/src/assets/sass/_ns-card.scss
@@ -22,9 +22,22 @@
   margin: 0;
 }
 
+.ns-card-storage {
+  @extend .ns-card;
+  text-align: unset;
+  & ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  & li {
+    margin-bottom: 5px;
+  }
+}
+
 .ns-card-info {
   @extend .ns-card;
-  color: $info;
+  color: $text;
 }
 
 .ns-card-form {
@@ -43,7 +56,7 @@
 }
 
 .ns-card-note {
-  color: $info;
+  color: $text;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
   transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
   display: block;
