added finishComponent to finalise match

--- a/src/app/scout/auto/auto.component.html
+++ b/src/app/scout/auto/auto.component.html
@@ -197,28 +197,28 @@
         </ion-col>
 
     </ion-row>
-    <ion-row class="ion-justify-content-center">
-        <ion-col size-lg="6">
-            <ion-button
-                    [disabled]="autoForm.pristine || autoForm.invalid"
-                    (click)="onSubmit()"
-                    expand="block" color="success">
-                Save Auto
-            </ion-button>
-        </ion-col>
-        <ion-col>
-            <ion-button (click)="autoForm.reset()"
-                expand="block" color="light">
-                Clear
-            </ion-button>
-        </ion-col>
-        <ion-col>
-            <ion-button (click)="router.navigateByUrl('/setup')"
-                expand="block" color="danger">
-                Cancel
-            </ion-button>
-        </ion-col>
-    </ion-row>
+<!--    <ion-row class="ion-justify-content-center">-->
+<!--        <ion-col size-lg="6">-->
+<!--            <ion-button-->
+<!--                    [disabled]="autoForm.pristine || autoForm.invalid"-->
+<!--                    (click)="onSubmit()"-->
+<!--                    expand="block" color="success">-->
+<!--                Save Auto-->
+<!--            </ion-button>-->
+<!--        </ion-col>-->
+<!--        <ion-col>-->
+<!--            <ion-button (click)="autoForm.reset()"-->
+<!--                expand="block" color="light">-->
+<!--                Clear-->
+<!--            </ion-button>-->
+<!--        </ion-col>-->
+<!--        <ion-col>-->
+<!--            <ion-button (click)="router.navigateByUrl('/setup')"-->
+<!--                expand="block" color="danger">-->
+<!--                Cancel-->
+<!--            </ion-button>-->
+<!--        </ion-col>-->
+<!--    </ion-row>-->
 </form>
 
 
