updated pit form, finish form and storage component

--- a/src/app/scout/auto/auto.component.html
+++ b/src/app/scout/auto/auto.component.html
@@ -12,30 +12,35 @@
                             </ion-item>
                         </ion-col>
                     </ion-row>
-                    <ion-row>
-                        <ion-col size="2">
-<!--                            <ul class="ns-auto-ul-blue">-->
-<!--                                <li> :{{parentData.teamDetails.idAlliance}} - {{parentData.teamDetails.idDriveStation}}</li>-->
-<!--                                <li>-->
-<!--                                   {{autoForm.value['position']['red1']}}-->
-<!--                                </li>-->
-<!--                                <li *ngIf="autoForm.value['position']['red1']">-->
-<!--                                    Red 1-->
-
-<!--                                </li>-->
-<!--                            </ul>-->
-
-                        </ion-col>
+                    <ion-row class="ion-nowrap ion-justify-content-evenly">
                         <ion-col>
+                            <ul class="ns-auto-ul-blue">
+                                <li>
+                                    1
+                                </li>
+                                <li>
+                                    2
+                                </li>
+                                <li>
+                                    3
+                                </li>
+                            </ul>
+                        </ion-col>
+                        <ion-col size="8">
                             <img src="assets/imgs/field.png">
                         </ion-col>
-
-                        <ion-col size="2">
-<!--                            <ul *ngIf="parentData.teamDetails.idAlliance === 1" class="ns-auto-ul-red">-->
-<!--                                <li *ngIf="parentData.teamDetails.idDriveStation === 1">-->
-<!--                                    one-->
-<!--                                </li>-->
-<!--                            </ul>-->
+                        <ion-col>
+                            <ul class="ns-auto-ul-red">
+                                <li>
+                                    1
+                                </li>
+                                <li>
+                                    2
+                                </li>
+                                <li>
+                                    3
+                                </li>
+                            </ul>
                         </ion-col>
                     </ion-row>
                 </ion-col>
