--- a/src/app/pit/pit.component.html
+++ b/src/app/pit/pit.component.html
@@ -561,20 +561,23 @@
                     </ion-col>
                 </ion-row>
 
+                <ion-row class="ion-justify-content-center">
+                    <ion-col class="ns-card-form" size-xl="6" size-lg="8" size-md="10" size-xs="12">
+                        <ion-list>
+                            <ion-item class="ns-pit-list" color="medium">
+                                Notes
+                            </ion-item>
+                            <ion-item>
+                                <ion-label position="floating">
+                                    Pit General Notes
+                                </ion-label>
+                                <ion-textarea placeholder="(General notes that doesn't go anywhere else)" formControlName="txPitNotes"></ion-textarea>
+                            </ion-item>
+                        </ion-list>
 
-                <ion-row *ngIf="spinner" class="ion-justify-content-center">
-                    <ion-col size-md="2">
-                        <ion-spinner></ion-spinner>
                     </ion-col>
                 </ion-row>
 
-                <ion-row *ngIf="successMessage" class="ion-justify-content-center">
-                    <ion-col class="ns-card-form" size-lg="6">
-                        <ion-item color="success">
-                            {{successMessage}}
-                        </ion-item>
-                    </ion-col>
-                </ion-row>
 
                 <ion-row *ngIf="pitForm.dirty && pitForm.invalid" class="ion-justify-content-center">
                     <ion-col class="ns-card-form" size-lg="6">
@@ -597,6 +600,22 @@
                         </ion-list>
                     </ion-col>
                 </ion-row>
+
+
+                <ion-row *ngIf="spinner" class="ion-justify-content-center">
+                    <ion-col size-md="2">
+                        <ion-spinner></ion-spinner>
+                    </ion-col>
+                </ion-row>
+
+                <ion-row *ngIf="successMessage" class="ion-justify-content-center">
+                    <ion-col class="ns-card-form" size-lg="6">
+                        <ion-item color="success">
+                            {{successMessage}}
+                        </ion-item>
+                    </ion-col>
+                </ion-row>
+
 
                 <ion-row class="ion-justify-content-center">
                     <ion-col class="ns-card-form" size-lg="6">
@@ -624,6 +643,7 @@
 
 
         </ion-row>
+
 
     </form>
 
